--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>LogOutServlet</servlet-name>
         <servlet-class>Servlets.LogOutServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SingUpServlet</servlet-name>
+        <servlet-class>Servlets.SingUpServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>LogOutServlet</servlet-name>
         <url-pattern>/LogOutServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SingUpServlet</servlet-name>
+        <url-pattern>/SingUpServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
