--- a/nbproject/genfiles.properties
+++ b/nbproject/genfiles.properties
@@ -1,4 +1,4 @@
-build.xml.data.CRC32=c41f17bb
+build.xml.data.CRC32=1e25a597
 build.xml.script.CRC32=edae937b
 build.xml.stylesheet.CRC32=651128d4@1.68.1.1
 # This file is used by a NetBeans-based IDE to track changes in generated files such as build-impl.xml.
@@ -6,3 +6,6 @@ build.xml.stylesheet.CRC32=651128d4@1.68.1.1
 nbproject/build-impl.xml.data.CRC32=c41f17bb
 nbproject/build-impl.xml.script.CRC32=664c1351
 nbproject/build-impl.xml.stylesheet.CRC32=99ea4b56@1.68.1.1
+nbproject/rest-build.xml.data.CRC32=c41f17bb
+nbproject/rest-build.xml.script.CRC32=0bb9628f
+nbproject/rest-build.xml.stylesheet.CRC32=0cfeebcc@1.27.1
