--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>SingUpServlet</servlet-name>
         <servlet-class>Servlets.SingUpServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>EditPerfilServlet</servlet-name>
+        <servlet-class>Servlets.EditPerfilServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>SingUpServlet</servlet-name>
         <url-pattern>/SingUpServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EditPerfilServlet</servlet-name>
+        <url-pattern>/EditPerfilServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
